--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="header-wrap">
                 <img src="img/logo.svg" alt="Contacts logo">
                 <h1>Contacts</h1>
-                <button class="logout-btn material-icons-outlined" title="logout" style="display:none;">logout</button>
+                <button class="logout-btn material-icons-outlined" title="Logout" style="display:none;">logout</button>
             </div>
         </div>
     </header>
